using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags
{
    public const string Walk = "speed";
    public const string Jumping_Bool = "jump";
    public const string Punch1_Trigger = "punch1";
    public const string Punch2_Trigger = "punch2";
    public const string Kick_Trigger = "kick";
    public const string Hurt_Trigger = "hurt";
    public const string Defense_Bool = "defense";
    public const string Die_Bool = "die";

}

public class Tags
{
    public const string Player_Tag = "Player";
    public const string Enemy_Tag = "Enemy";
    public const string Enemy_Tag_2 = "Enemy2";
    public const string Punch_Attack_Tag = "PunchAttacker";
    public const string Kick_Attack_Tag = "KickAttacker";
    public const string Player_Health_Bar = "PlayerHealthBar";
    public const string Enemy_Health_Bar = "EnemyHealthBar";
    public const string Enemy_Health_Bar_2 = "EnemyHealthBar2";
}
